--- a/src/client/src/app/catalog/catalog.component.scss
+++ b/src/client/src/app/catalog/catalog.component.scss
@@ -53,7 +53,7 @@
     border-radius: 4px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 
-    h3 {
+    .catalog-name {
       margin-top: 0;
       color: #007bff;
     }
@@ -66,9 +66,11 @@
       border-radius: 4px;
       background-color: #f5f5f5;
 
-      h4 {
+      tool-name {
         margin-top: 0;
         color: #333;
+        font-weight: bold;
+        cursor: click;
       }
 
       p {
