--- a/src/client/src/app/app.component.scss
+++ b/src/client/src/app/app.component.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #cb0618;
   color: white;
 
   i {
