--- a/src/client/src/app/tool/details-modal/tool-details-modal.component.scss
+++ b/src/client/src/app/tool/details-modal/tool-details-modal.component.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .modal-content {
@@ -18,6 +19,7 @@
   max-width: 500px;
   width: 100%;
   white-space: break-spaces;
+  z-index: 3;
 
   h2 {
     margin-top: 0;
