--- a/src/client/src/app/message/message.component.scss
+++ b/src/client/src/app/message/message.component.scss
@@ -12,6 +12,8 @@
     color: white;
     white-space: break-spaces;
     line-break: anywhere;
+    max-height: min(500px, calc(100vh - 400px));
+    overflow-x: auto;
 
     markdown {
       display: flex;
