--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -5,8 +5,9 @@ body {
     height: 100%;
 }
 
-body {
-    margin: 0;
+body,
+p {
+    margin: 0 !important;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
