--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -11,6 +11,10 @@ p {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+h2 {
+    margin: 5px 0 0 0 !important;
+}
+
 i.fa,
 i.fas {
     margin-right: 5px;
