--- a/src/client/src/app/tool/details-modal/tool-details-modal.component.scss
+++ b/src/client/src/app/tool/details-modal/tool-details-modal.component.scss
@@ -16,7 +16,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+  max-width: 80vw;
   width: 100%;
   white-space: break-spaces;
   z-index: 3;
@@ -26,17 +26,10 @@
   }
 
   button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #0056b3;
-    }
+    width: 100px;
+    position: absolute;
+    top: 7px;
+    right: 10px;
   }
 
   #suggested-guidance span {
