--- a/src/client/src/app/tool/tool.component.scss
+++ b/src/client/src/app/tool/tool.component.scss
@@ -108,6 +108,14 @@
           margin-left: 10px;
         }
 
+        .tool-action {
+          position: relative;
+
+          &.left {
+            position: relative;
+          }
+        }
+
         #ai-mode-toggle {
           display: flex;
           align-items: center;
@@ -121,15 +129,65 @@
             margin-right: 10px;
             font-weight: bold;
           }
-          .active{
+
+          .active {
             border-color: black;
           }
 
         }
 
+        #related-tools {
+          .related-tools-dropdown {
+            position: relative;
+            display: inline-block;
+
+            .related-tools-btn {
+              background-color: #f1f1f1;
+              color: #333;
+              padding: 8px 16px;
+              font-size: 14px;
+              border: none;
+              cursor: pointer;
+              border-radius: 4px;
+
+              &:hover {
+                background-color: #ddd;
+              }
+
+              i {
+                margin-left: 5px;
+              }
+            }
+
+            .related-tools-content {
+              display: none;
+              position: absolute;
+              background-color: #f9f9f9;
+              min-width: 160px;
+              box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+              z-index: 1;
+              border-radius: 4px;
+              overflow: hidden;
+
+              &.show {
+                display: block;
+              }
+
+              a {
+                color: #333;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                cursor: pointer;
+
+                &:hover {
+                  background-color: #f1f1f1;
+                }
+              }
+            }
+          }
+        }
       }
-
-
     }
   }
 }
